# big3_searchable_hedb

./: .gitignore  CMakeLists.txt  README.md  big3_searchable_hedb  big3_searchable_hedb.bak
HDB_comparison_library/: CMakeLists.txt  big3_searchable_hedb
HDB_comparison_library/comp_lib/: comparator.cpp  comparator.h  tools.h
HDB_comparison_library/html/: HDB__supergate_8hpp_source.html  HDB__supergate__server_8hpp_source.html  HDB__supergate__user_8hpp_source.html  annotated.html  classHDB__supergate___1_1CSVIterator-members.html  classHDB__supergate___1_1CSVIterator.html  classHDB__supergate___1_1CSVRange-members.html  classHDB__supergate___1_1CSVRange.html  classHDB__supergate___1_1CSVRow-members.html  classHDB__supergate___1_1CSVRow.html  classHDB__supergate___1_1CtxtIndex-members.html  classHDB__supergate___1_1CtxtIndex.html  classHDB__supergate___1_1CtxtIndexFile-members.html  classHDB__supergate___1_1CtxtIndexFile.html  classHDB__supergate___1_1HEQuery-members.html  classHDB__supergate___1_1HEQuery.html  classHDB__supergate___1_1PtxtIndex-members.html  classHDB__supergate___1_1PtxtIndex.html  classHDB__supergate___1_1PtxtIndexFile-members.html  classHDB__supergate___1_1PtxtIndexFile.html  classHDB__supergate__server___1_1SERVER-members.html  classHDB__supergate__server___1_1SERVER.html  classHDB__supergate__user___1_1USER-members.html  classHDB__supergate__user___1_1USER.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespaceHDB__supergate__.html  namespaceHDB__supergate__server__.html  namespaceHDB__supergate__user__.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  (+5 more)
HDB_comparison_library/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  searchdata.js  typedefs_0.js  (+3 more)
HDB_comparison_library/include/: HDB_supergate.hpp  HDB_supergate_server.hpp  HDB_supergate_user.hpp
HDB_comparison_library/latex/: annotated.tex  classHDB__supergate___1_1CSVIterator.tex  classHDB__supergate___1_1CSVRange.tex  classHDB__supergate___1_1CSVRow.tex  classHDB__supergate___1_1CtxtIndex.tex  classHDB__supergate___1_1CtxtIndexFile.tex  classHDB__supergate___1_1HEQuery.tex  classHDB__supergate___1_1PtxtIndex.tex  classHDB__supergate___1_1PtxtIndexFile.tex  classHDB__supergate__server___1_1SERVER.tex  classHDB__supergate__user___1_1USER.tex  namespaceHDB__supergate__.tex  namespaceHDB__supergate__server__.tex  namespaceHDB__supergate__user__.tex  namespaces.tex  refman.tex  structHDB__supergate___1_1BGV__param.tex  structHDB__supergate___1_1STD128__HDB.tex  structHDB__supergate___1_1TOY__HDB.tex
HDB_comparison_library/src/: HDB_supergate.cpp  HDB_supergate_server.cpp  HDB_supergate_user.cpp
db/: 64bit.csv  all10.csv  db_06141821.csv  db_06151048.csv  db_100.csv  insurance_int_encoded.csv  insurance_int_encoding_table.prn  mini.csv  sexage.csv  skew1.csv  skew2.csv  small.csv  stroke_int_encoded.csv  stroke_int_encoding_table.prn  test1.csv
html/: HDB__comparison__library_2include_2HDB__supergate_8hpp_source.html  HDB__comparison__library_2include_2HDB__supergate__server_8hpp_source.html  HDB__comparison__library_2include_2HDB__supergate__user_8hpp_source.html  annotated.html  binio_8h_source.html  classHDB__supergate___1_1CSVIterator-members.html  classHDB__supergate___1_1CSVIterator.html  classHDB__supergate___1_1CSVRange-members.html  classHDB__supergate___1_1CSVRange.html  classHDB__supergate___1_1CSVRow-members.html  classHDB__supergate___1_1CSVRow.html  classHDB__supergate___1_1CtxtIndex-members.html  classHDB__supergate___1_1CtxtIndex.html  classHDB__supergate___1_1CtxtIndexFile-members.html  classHDB__supergate___1_1CtxtIndexFile.html  classHDB__supergate___1_1HEQuery-members.html  classHDB__supergate___1_1HEQuery.html  classHDB__supergate___1_1PtxtIndex-members.html  classHDB__supergate___1_1PtxtIndex.html  classHDB__supergate___1_1PtxtIndexFile-members.html  classHDB__supergate___1_1PtxtIndexFile.html  classHDB__supergate__server___1_1SERVER-members.html  classHDB__supergate__server___1_1SERVER.html  classHDB__supergate__user___1_1USER-members.html  classHDB__supergate__user___1_1USER.html  classHDB__supergate__user___1_1USER__coll__graph.dot  classHDB__supergate__user___1_1USER__coll__graph.md5  classes.html  classhe__cmp_1_1Comparator-members.html  classhe__cmp_1_1Comparator.html  comparator_8h_source.html  dir_02abff4088706ee6f9624f074781b849.html  dir_0800afdb795e03c5abc3fecb96ec099f.html  dir_0c03f442b0773f034918f1f9dc7ae91d.html  dir_11b2a4eb305faa6dc0711b501ae5fbb1.html  dir_2ac13e279f85d2f88aac43b543aa700c.html  dir_2b1683eeccac6fb944e43fe25a753de3.html  dir_2b19e1647a9be331e8c06cbcafff1ac7.html  dir_307009c9eefa04718de5fff53272abc7.html  dir_3f39fe225849b60d89c4e4d7afa32a10.html  (+53 more)
latex/: annotated.tex  classHDB__supergate___1_1CSVIterator.tex  classHDB__supergate___1_1CSVRange.tex  classHDB__supergate___1_1CSVRow.tex  classHDB__supergate___1_1CtxtIndex.tex  classHDB__supergate___1_1CtxtIndexFile.tex  classHDB__supergate___1_1HEQuery.tex  classHDB__supergate___1_1PtxtIndex.tex  classHDB__supergate___1_1PtxtIndexFile.tex  classHDB__supergate__server___1_1SERVER.tex  classHDB__supergate__user___1_1USER.tex  classHDB__supergate__user___1_1USER.tex.tmp  classHDB__supergate__user___1_1USER__coll__graph.dot  classHDB__supergate__user___1_1USER__coll__graph.md5  classhe__cmp_1_1Comparator.tex  dir_02abff4088706ee6f9624f074781b849.tex  dir_0800afdb795e03c5abc3fecb96ec099f.tex  dir_0c03f442b0773f034918f1f9dc7ae91d.tex  (+44 more)
query_results/: eqext  (+2 more)
(+71 files in other folders)
